--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/Oven-Roasted_Asparagus.html">Oven-Roasted Asparagus</a>
+    <a href="recipes/Spinach_Strawberry_salad.html">Spinach and Strawberry salad</a>
 </body>
 </html>
