--- a/recipes/Spinach_Strawberry_salad.html
+++ b/recipes/Spinach_Strawberry_salad.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Lasagna</h1>
     <a href="../index.html">Home</a>
-    <img id="lasagnaImg" src="../media/lasagna.jpg" />
+    <img id="lasagnaImg" src="/media/lasagna.jpg" />
     <label for="lasagnaImg">Picture of lasaga</label>
     <p>This is lasagna</p>
     <p>Lasagna good. :)</p>
