--- a/recipes/Spinach_Strawberry_salad.html
+++ b/recipes/Spinach_Strawberry_salad.html
@@ -3,86 +3,42 @@
     <title></title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Spinach Strawberry salad</h1>
     <a href="../index.html">Home</a>
-    <img id="lasagnaImg" src="/media/lasagna.jpg" />
-    <label for="lasagnaImg">Picture of lasaga</label>
-    <p>This is lasagna</p>
-    <p>Lasagna good. :)</p>
+    <img id="Spinach_Strawberry_saladImg" src="../media/Spinach_Strawberry_salad.jpg" />
+    <label for="Spinach_Strawberry_saladImg">Picture of da salad</label>
+    <p>This is sald</p>
+    <p>um :/</p>
     <h2>Ingredients</h2>
     <ul>
         <li>
-            1 pound sweet Italian sausage
+            2 bunches spinach, rinsed and torn into bite-size pieces
         </li>
         <li>
-            2/4 pound lean ground beef
+            4 cups sliced strawberries
         </li>
         <li>
-            1/2 cup minced onion
+            1/2 cup vegetable oil
         </li>
         <li>
-            2 cloves garlic, crushed
+            1/2 cup white sugar
         </li>
         <li>
-            1 (28 ounce) can crushed tomatoes
+            1/4 cup white wine vinegar
         </li>
         <li>
-            2 (6.5 ounce) cans canned tomato sauce
+            2 tablespoons sesame seeds
         </li>
         <li>
-            2 (6 ounce) cans tomato paste
+            1 tablespoon poppy seeds
         </li>
-        <li>
-            1/2 cup water
-        </li>
-        <li>
-            2 tablespoons white sugar
-        </li>
-        <li>
-            4 tablespoons chopped fresh parsley, divided
-        </li>
-        <li>
-            1 1/2 teaspoons dried basil leaves
-        </li>
-        <li>
-            1 1/2 teaspoons salt, divided, or to taste
-        </li>
-        <li>
-            1 teaspoon Italian seasoning
-        </li>
-        <li>
-            1/2 teaspoon fennel seeds
-        </li>
-        <li>
-            1/4 teaspoon ground black pepper
-        </li>
-        <li>
-            12 lasagna noodles
-        </li>
-        <li>
-            16 ounces ricotta cheese
-        </li>
-        <li>
-            1 egg
-        </li>
-        <li>
-            3/4 pound mozzarella cheese, sliced
-        </li>
-        <li>
-            3/4 cup grated Parmesan cheese
-        </li>
+        <li>1/4 teaspoon paprika</li>
     </ul>
     <ol>
-        <li>Gather all your ingredients.</li>
-        <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
-        <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
-        <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
-        <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
-        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-        <li>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
-        <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
-        <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
-        <li>Rest lasagna for 15 minutes before serving.</li>
-    </ol>
+        <li>Toss spinach and strawberries together in a large bowl.</li>
+        <li>
+            Whisk oil, sugar, vinegar, sesame seeds, poppy seeds, and paprika together in a medium bowl; pour over spinach and strawberries, and toss to coat.
+        </li>
+        </ol>
 </body>
 </html>
